docs/api/qiskit/0.19/qiskit.aqua.circuits.DNF.mdx
---
title: DNF (v0.19)
description: API reference for qiskit.aqua.circuits.DNF in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.circuits.DNF
---

# DNF

<Class id="qiskit.aqua.circuits.DNF" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/circuits/boolean_logical_circuits.py" signature="DNF(ast, num_vars=None)" modifiers="class">
  Class for constructing circuits for Disjunctive Normal Forms

  Constructor.

  **Parameters**

  *   **ast** (*tuple*) – The logic expression as an Abstract Syntax Tree (AST) tuple
  *   **num\_vars** (*int*) – Number of boolean variables

  **Raises**

  [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – invalid input

  ## Attributes

  <span id="dnf-ancillary-register" />

  ### ancillary\_register

  <Attribute id="qiskit.aqua.circuits.DNF.ancillary_register">
    returns ancillary register
  </Attribute>

  <span id="dnf-clause-register" />

  ### clause\_register

  <Attribute id="qiskit.aqua.circuits.DNF.clause_register">
    returns clause register
  </Attribute>

  <span id="dnf-num-clauses" />

  ### num\_clauses

  <Attribute id="qiskit.aqua.circuits.DNF.num_clauses">
    returns num clauses
  </Attribute>

  <span id="dnf-num-variables" />

  ### num\_variables

  <Attribute id="qiskit.aqua.circuits.DNF.num_variables">
    return num variables
  </Attribute>

  <span id="dnf-output-register" />

  ### output\_register

  <Attribute id="qiskit.aqua.circuits.DNF.output_register">
    returns output register
  </Attribute>

  <span id="dnf-variable-register" />

  ### variable\_register

  <Attribute id="qiskit.aqua.circuits.DNF.variable_register">
    returns variable register
  </Attribute>

  ## Methods

  <span id="dnf-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.circuits.DNF.construct_circuit" signature="DNF.construct_circuit(circuit=None, variable_register=None, clause_register=None, output_register=None, ancillary_register=None, mct_mode='basic')">
    Construct circuit.

    **Parameters**

    *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – The optional circuit to extend from
    *   **variable\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum register to use for problem variables
    *   **clause\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum register to use for problem clauses
    *   **output\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum register to use for holding the output
    *   **ancillary\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum register to use as ancilla
    *   **mct\_mode** (*str*) – The mode to use for building Multiple-Control Toffoli

    **Returns**

    quantum circuit.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – invalid input
  </Function>
</Class>

